# falco

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml  ci.yml  codeql.yaml  engine-version-weakcheck.yaml  format.yaml  insecure-api.yaml  master.yaml  release.yaml  reusable_build_dev.yaml  reusable_build_docker.yaml  reusable_build_packages.yaml  reusable_fetch_version.yaml  reusable_publish_docker.yaml  reusable_publish_packages.yaml  reusable_test_packages.yaml  staticanalysis.yaml  tests.yaml
cmake/cpack/: CMakeCPackOptions.cmake
cmake/modules/: CPackConfig.cmake  CompilerFlags.cmake  falco-version.cmake
docker/: README.md
docker/driver-loader/: Dockerfile
docker/falco/: Dockerfile
scripts/: CMakeLists.txt
unit_tests/: CMakeLists.txt
userspace/engine/: CMakeLists.txt
userspace/falco/: CMakeLists.txt  config_falco.h.in  grpc_server.cpp
